--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,8 +9,8 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Dependências Python
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY /requirements.txt .
+RUN pip install --no-cache-dir -r /requirements.txt
 
 # Código
 COPY . .
