--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -18,4 +18,4 @@ RUN pip install -r requirements.txt
 
 COPY backend/ .
 
-CMD ["celery", "-A", "app.core.celery_app.celery_app", "worker", "--logl
+CMD celery -A app.core.celery_app.celery_app worker --loglevel=info --concurrency=2
