--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,28 +1,12 @@
-FROM node:20-alpine AS deps
-WORKDIR /app
-COPY frontend/package.json ./
-# usa npm install (não exige package-lock.json)
-RUN npm install --legacy-peer-deps
+# Usuário não-root
+RUN addgroup --system nodejs && adduser --system --ingroup nodejs nextjs
 
-FROM node:20-alpine AS builder
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
-COPY frontend/ .
+# Copia artefatos do build standalone
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+COPY --from=builder --chown=nextjs:nodejs /app/public ./public
 
-ARG NEXT_PUBLIC_API_URL=http://localhost:8000
-ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
-ENV NEXT_TELEMETRY_DISABLED=1
-
-RUN npm run build
-
-FROM node:20-alpine AS runner
-WORKDIR /app
-ENV NODE_ENV=production
-ENV NEXT_TELEMETRY_DISABLED=1
-
-COPY --from=builder /app/.next/standalone ./
-COPY --from=builder /app/.next/static ./.next/static
-COPY --from=builder /app/public ./public
+USER nextjs
 
 EXPOSE 3000
 
