--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,25 +1,43 @@
 FROM node:20-alpine AS deps
+
 WORKDIR /app
 COPY package.json package-lock.json* ./
 RUN npm ci --legacy-peer-deps
 
+# ── Build ─────────────────────────────────────────────────
 FROM node:20-alpine AS builder
+
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
-# Build args para variáveis públicas do Next.js (baked no build)
+# NEXT_PUBLIC_API_URL é baked no build estático do Next.js
 ARG NEXT_PUBLIC_API_URL=http://localhost:8000
 ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+ENV NEXT_TELEMETRY_DISABLED=1
 
 RUN npm run build
 
+# ── Runner ────────────────────────────────────────────────
 FROM node:20-alpine AS runner
+
 WORKDIR /app
 ENV NODE_ENV=production
-COPY --from=builder /app/.next/standalone ./
-COPY --from=builder /app/.next/static ./.next/static
-COPY --from=builder /app/public ./public
+ENV NEXT_TELEMETRY_DISABLED=1
+
+# Usuário não-root
+RUN addgroup --system nodejs && adduser --system --ingroup nodejs nextjs
+
+# Copia artefatos do build standalone
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+COPY --from=builder --chown=nextjs:nodejs /app/public ./public
+
+USER nextjs
 
 EXPOSE 3000
+
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD wget -qO- http://localhost:3000 || exit 1
+
 CMD ["node", "server.js"]
