--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -30,6 +30,6 @@ COPY --from=builder /app/public ./public
 EXPOSE 3000
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD wget -qO- http://localhost:3000 || exit 1
+    CMD wget -qO- http://localhost:${PORT:-3000}/ || exit 1
 
 CMD ["node", "server.js"]
