fix(frontend): set HOSTNAME=0.0.0.0 and robust healthcheck for Easypanel reachability

--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,7 +1,7 @@
 FROM node:20-alpine AS deps
 WORKDIR /app
 COPY frontend/package.json ./
-# usa npm install (não exige package-lock.json)
+# Use npm install because package-lock.json might be missing
 RUN npm install --legacy-peer-deps
 
 FROM node:20-alpine AS builder
@@ -23,9 +23,14 @@ ENV NEXT_TELEMETRY_DISABLED=1
 ENV HOSTNAME=0.0.0.0
 ENV PORT=3000
 
-COPY --from=builder /app/.next/standalone ./
-COPY --from=builder /app/.next/static ./.next/static
-COPY --from=builder /app/public ./public
+# Usuário não-root
+RUN addgroup --system nodejs && adduser --system --ingroup nodejs nextjs
+
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+COPY --from=builder --chown=nextjs:nodejs /app/public ./public
+
+USER nextjs
 
 EXPOSE 3000
 
