--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -26,6 +26,9 @@ ENV PORT=3000
 # Usuário não-root
 RUN addgroup --system nodejs && adduser --system --ingroup nodejs nextjs
 
+# Instala curl para o healthcheck (Alpine)
+RUN apk add --no-cache curl
+
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 COPY --from=builder --chown=nextjs:nodejs /app/public ./public
@@ -35,7 +38,7 @@ USER nextjs
 EXPOSE 3000
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-    CMD wget -qO- http://localhost:${PORT:-3000}/api/health || exit 1
+    CMD curl -f http://localhost:${PORT:-3000}/api/health || exit 1
 
 CMD ["node", "server.js"]
 
