--- a/easypanel-compose.yml
+++ b/easypanel-compose.yml
@@ -67,7 +67,8 @@ services:
       redis:
         condition: service_started
     command: >
-      sh -c "python scripts/seed_plans.py && uvicorn app.main:app --host 0.0.0.0 --port 8000 --workers 2"
+      sh -c "python scripts/seed_plans.py && uvicorn app.main:app --host 0.0.0.0 --port 8000 --workers 2 --proxy-headers --forwarded-allow-ips='*'"
+
 
   # ── Celery Worker ──────────────────────────────────────
   worker:
