--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,7 +6,7 @@ python-multipart==0.0.20
 # Database
 sqlalchemy==2.0.38
 alembic==1.14.1
-psycopg2-binary==2.9.10
+psycopg2-binary>=2.9.10
 asyncpg==0.30.0
 
 # Auth & Security
